@@ -33,7 +33,8 @@ Bugs fixed
 * #1949: Use ``safe_getattr`` in the coverage builder to avoid aborting with
   descriptors that have custom behavior.
 * #1915: Do not generate smart quotes in doc field type annotations.
-* #1796, On py3, automated .mo building cause UnicodeDecodeError
+* #1796: On py3, automated .mo building caused UnicodeDecodeError.
+* #1923: Use babel features only if the babel latex element is nonempty.
 
 
 Release 1.3.1 (released Mar 17, 2015)
